@@ -319,6 +319,9 @@ Trunk (unreleased changes)
     HADOOP-3025. ChecksumFileSystem supports the delete method with 
     the recursive flag. (Mahadev Konar via dhruba)
 
+    HADOOP-3012. dfs -mv file to user home directory throws exception if 
+    the user home directory does not exist. (Mahadev Konar via dhruba)
+
 Release 0.16.2 - Unreleased
 
   BUG FIXES
